	- Removed Bayi's Extended Questlog fix for quest names since his addon now fixes it.
	- Incorrectly had "Wanted: Shattered Hand Centurions" marked as a Heroic quest.
	- Coordinates of quest giver for Horde quest "Shadowshard Fragments" were wrong.
	- Other miscellanous typos. Thanks to Telchar for finding some I missed.

- Quests added:
	- Underbog: Bring Me A Shrubbery!
	- Underbog: Wanted: A Black Stalker Egg (Heroic Daily)
	- Slave Pens: Wanted: The Heart of Quagmirran (Heroic Daily)
	- Steamvault: Wanted: Coilfang Myrmidons (Daily)
	- Steamvault: Wanted: The Warlord's Treatise (Heroic Daily)
	- Auch Crypts: Wanted: The Exarch's Soul Gem (Heroic Daily)
	- Mana Tombs: Wanted: Shaffar's Wondrous Pendant (Heroic Daily)
	- Sethekk Halls: Wanted: The Headfeathers of Ikiss (Heroic Daily)
	- Shadow Labyrinth: Wanted: Malicious Instructors (Daily)
	- Shadow Labyrinth: Wanted: Murmur's Whisper (Heroic Daily)
	- Escape from Durnholde: Wanted: The Epoch Hunter's Head  (Heroic Daily)
	- Black Morass: Wanted: Aeonus's Hourglass  (Heroic Daily)
	- Black Morass: Wanted: Rift Lords  (Daily)
	- Mechanar: Wanted: Pathaleon's Projector  (Heroic Daily)
	- Mechanar: Wanted: Tempest-Forge Destroyers  (Daily)
	- Botanica: Wanted: A Warp Splinter Clipping  (Heroic Daily)
	- Botanica: Wanted: Sunseeker Channelers  (Daily)
	- Arcatraz: Wanted: Arcatraz Sentinels  (Daily)
	- Arcatraz: Wanted: The Scroll of Skyriss  (Heroic Daily)



Version 4.0.11 (by Thandrenn)

- Updated some map file names and location numbers for Atlas 1.10.3.
- When opened, AtlasQuest will now automatically display the appropriate quests for the player's faction.  (Suggested by Iffonox)
- Option to show Alliance quests by default removed, since it's obsolete.
- Fixed bug with Auchenai Crypts: Everything Will Be Alright (Horde version).
- Fixed bug with Molten Core: A Binding Contract. Also affected "The Molten Core".
- Fixed a few typos here and there, some Prequest icons were not showing up.